--- a/styles/style.css
+++ b/styles/style.css
@@ -9,23 +9,371 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+
+.logo {
+  width: 228px;
+  height: 32px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.logo_place_header {
+  background-image: url('../images/logo_place_header.svg');
+  position: absolute;
+  z-index: 1;
+  top: 30px;
+  left: 64px;
+}
+
+.logo_place_footer {
+  background-image: url('../images/logo_place_footer.svg');
+}
+
+
+/*Header*/
+
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
+  display: flex;
+  background-color: #f2f2f2;
+  position: relative;
+  overflow: hidden;
+  /*чтобы не выезжал вниз синий квадрат на маленьком экране*/
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.header__title {
+  margin: auto 64px;
+  z-index: 2;
+  max-width: 730px;
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: 600;
+}
+
+.header__subtitle {
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  z-index: 2;
+  max-width: 338px;
+  bottom: 30px;
+  left: 64px;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+}
+
+.header__link {
+  text-decoration: none;
+  color: #2f80ed;
+}
+
+.header__main-illustration {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 765px;
+  height: 608px;
+  z-index: 1;
+  object-fit: cover;
+}
+
 .header__square-pic {
   height: 568px;
   width: 568px;
+  position: absolute;
+  top: 64px;
+  right: 0;
+  background-color: #2f80ed;
+}
+
+
+/*Content*/
+
+.content {
+  position: relative;
+  color: #000;
+}
+
+
+/*Description*/
+
+.description {
+  padding: 100px 0;
+  margin: 0;
+}
+
+.two-columns {
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  width: 80%;
+  align-items: baseline;
+}
+
+.two-columns__brief {
+  max-width: 175px;
+  font-size: 18px;
+  line-height: 1.2;
+  color: #2f80ed;
+  font-weight: normal;
+  margin: 0;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+  padding-left: 15px;
+  /*отступ от two-columns__brief, чтоб не сливались на узком экране*/
+}
+
+.two-columns__paragraph {
+  font-size: 24px;
+  line-height: 34px;
+  font-style: normal;
+  margin: 0 0 30px;
+}
+
+.two-columns__paragraph:last-child {
+  margin: 0;
+}
+
+.two-columns__span-accent {
+  font-weight: 600;
+}
+
+
+/*Digits*/
+
+.digits {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 0 100px;
+}
+
+.section-title {
+  width: 60%;
+  text-align: center;
+  padding: 0;
+  margin: 0 0 20px;
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight: 600;
+}
+
+.section-subtitle {
+  margin: 0;
+  width: 60%;
+  text-align: center;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+}
+
+.table {
+  max-width: 1100px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
+}
+
+.table__cell {
+  width: 250px;
+  margin: 60px 0 0 0;
+}
+
+.table__heading {
+  text-decoration: none;
+  font-size: normal;
+  margin: 0;
+  padding: 0;
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: 600;
+}
+
+.table__text {
+  margin: 20px 0 0;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+}
+
+
+/*Feynman*/
+
+.feynman {
+  background-image: url('../images/feynman.png');
+  background-size: 867px 637px;
+  background-position: bottom left;
+  background-repeat: no-repeat;
+  min-height: 890px;
+  position: relative;
+}
+
+.feynman__title {
+  max-width: 648px;
+  margin: 0 auto;
+  padding: 100px 0 70px;
+  text-align: center;
+  font-size: 120px;
+  line-height: 1.15;
+  font-weight: 600;
+}
+
+.feynman__subtitle {
+  text-align: center;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  /*в брифе не была задана ширина этого блока,
+  но при расположении его на всю ширину родительского,
+  есть вероятность наложения его текста на текст ссылки,
+  если какой-то из текстов изменится*/
+  max-width: 400px;
+  margin: auto;
+}
+
+.feynman__link {
+  text-decoration: none;
+  color: #2f80ed;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  max-width: 250px;
+  /*размер не из брифа, см.коммент к feynman__subtitle*/
+}
+
+
+/*Kaufman*/
+
+.kaufman {
+  overflow: hidden;
+  background-color: #1f1f1f;
+  padding: 90px 0;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  top: 0;
+  right: -210px;
+  width: 877px;
+  height: 877px;
+}
+
+.section-title_theme_dark {
+  color: white;
+  z-index: 1;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+  z-index: 1;
+}
+
+.table_theme_dark {
+  z-index: 1;
 }
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
-  margin-right: 0;
   margin-top: 80px;
+}
+
+.table__heading_theme_dark {
+  color: white;
+}
+
+.table__text_theme_dark {
+  color: white;
+}
+
+
+/*Footer*/
+
+.footer {
+  background-color: #1f1f1f;
+  min-height: 350px;
+  color: white;
+}
+
+.footer__columns {
+  margin: 0 auto;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  min-height: 250px;
+  padding: 60px 0 40px;
+}
+
+.footer__column {
+  display: flex;
+}
+
+.footer__column_content_info {
+  flex-direction: column;
+}
+
+.footer__column_content_social {
+  flex-direction: column;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.footer__author {
+  margin: 18px 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__column-heading {
+  margin: 0;
+  padding: 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.footer__column-links {
+  margin: 20px 0 16px;
+  padding: 0;
+  list-style: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__column-link {
+  text-decoration: none;
+  color: white;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
