--- a/styles/style.css
+++ b/styles/style.css
@@ -46,6 +46,7 @@
 }
 
 .header__title {
+  padding: 0;
   margin: auto 64px;
   z-index: 2;
   max-width: 730px;
@@ -122,13 +123,12 @@
   color: #2f80ed;
   font-weight: normal;
   margin: 0;
+  padding: 0;
 }
 
 .two-columns__main-text {
   width: 80%;
   min-width: 784px;
-  padding-left: 15px;
-  /*отступ от two-columns__brief, чтоб не сливались на узком экране*/
 }
 
 .two-columns__paragraph {
@@ -136,6 +136,7 @@
   line-height: 34px;
   font-style: normal;
   margin: 0 0 30px;
+  padding: 0;
 }
 
 .two-columns__paragraph:last-child {
@@ -169,6 +170,7 @@
 
 .section-subtitle {
   margin: 0;
+  padding: 0;
   width: 60%;
   text-align: center;
   font-size: 24px;
@@ -202,6 +204,7 @@
 
 .table__text {
   margin: 20px 0 0;
+  padding: 0;
   font-size: 18px;
   line-height: 1.2;
   font-weight: normal;
@@ -240,6 +243,7 @@
   если какой-то из текстов изменится*/
   max-width: 400px;
   margin: auto;
+  padding: 0;
 }
 
 .feynman__link {
@@ -275,6 +279,9 @@
   right: -210px;
   width: 877px;
   height: 877px;
+  background-image: url('../images/kaufman-triangle.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .section-title_theme_dark {
@@ -344,6 +351,7 @@
 
 .footer__author {
   margin: 18px 0;
+  padding: 0;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
