--- a/styles/style.css
+++ b/styles/style.css
@@ -220,6 +220,7 @@
   background-repeat: no-repeat;
   min-height: 890px;
   position: relative;
+  background-color: #f2f2f2;
 }
 
 .feynman__title {
