--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,13 @@
+@keyframes rotation {
+  from {
+      transform: rotate(0deg);
+  }
+  to {
+      transform: rotate(360deg);
+  }
+}
+
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -9,6 +19,13 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+.link-opacity {
+  transition: opacity .4s ease-out;
+}
+
+.link-opacity:hover {
+  opacity: .7;
+}
 
 .logo {
   width: 228px;
@@ -28,6 +45,10 @@
 
 .logo_place_footer {
   background-image: url('../images/logo_place_footer.svg');
+}
+
+.rotation {
+  animation: rotation linear 20s infinite;
 }
 
 
@@ -72,6 +93,8 @@
 .header__link {
   text-decoration: none;
   color: #2f80ed;
+  padding: 0;
+  margin: 0;
 }
 
 .header__main-illustration {
@@ -105,7 +128,7 @@
 /*Description*/
 
 .description {
-  padding: 100px 0;
+  padding: 100px 0 0;
   margin: 0;
 }
 
@@ -156,7 +179,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0 0 100px;
+  padding: 100px 0;
 }
 
 .section-title {
@@ -212,6 +235,93 @@
 }
 
 
+/*Techniques*/
+
+.techniques {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 100px 0 0;
+}
+
+.cards {
+  max-width: 920px;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
+}
+
+.cards__item {
+  width: 240px;
+  margin: 60px 100px 0 0;
+  text-align: center;
+}
+
+.cards__item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.cards__image {
+  width: 160px;
+  height: 160px;
+  border-radius: 100%;
+  margin: 0 40px 43px;
+}
+
+.cards__title {
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: 600;
+}
+
+.cards__description {
+  margin: 16px 0 0;
+  padding: 0;
+  font-size: 18px;
+  line-height: 23px;
+  font-weight: normal;
+}
+
+
+/*Video*/
+
+.video {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 100px 0 0;
+}
+
+.video__iframes {
+  display: flex;
+  column-gap: 20px;
+  margin: 50px 0 -50px;
+  z-index: 1;
+}
+
+.video__iframe {
+  border: none;
+  width: 515px;
+  height: 316px;
+}
+
+
+/*Oakley*/
+
+.oakley {
+  padding: 160px 0 0;
+  margin: 0;
+  background-color: #f2f2f2;
+}
+
+
 /*Feynman*/
 
 .feynman {
@@ -249,6 +359,8 @@
 }
 
 .feynman__link {
+  padding: 0;
+  margin: 0;
   text-decoration: none;
   color: #2f80ed;
   position: absolute;
@@ -259,6 +371,84 @@
   font-weight: normal;
   max-width: 250px;
   /*размер не из брифа, см.коммент к feynman__subtitle*/
+}
+
+
+/*Khan*/
+
+.khan {
+  background-color: #f2f2f2;
+}
+
+.khan__container {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  padding: 105px 0 0;
+  margin: 0 auto;
+}
+
+.khan__author {
+  margin: 0;
+  padding: 0;
+  font-size: 30px;
+  line-height: 42px;
+  font-weight: normal;
+}
+
+.khan__title {
+  margin: 0;
+  padding: 0;
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight: 600;
+}
+
+.khan__quote {
+  margin: 50px 0 0;
+  padding: 0;
+  max-width: 790px;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+}
+
+.khan__quote-author {
+  margin: 36px 0 0;
+  padding: 0;
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: 600;
+}
+
+.khan__quote-author-subline {
+  margin: 10px 0 0;
+  padding: 0;
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: normal;
+}
+
+.khan__book-container {
+  margin: 68px 0 0;
+  display: flex;
+}
+
+.khan__book-pic {
+ width: 620px;
+ height: 608px;
+ object-fit: cover;
+ object-position: left top;
+}
+
+.khan__buy-link {
+  text-decoration: none;
+  color: #2f80ed;
+  font-size: 30px;
+  line-height: 42px;
+  font-weight: normal;
+  margin: 0 0 0 48px;
+  padding: 0;
 }
 
 
@@ -314,6 +504,39 @@
   color: white;
 }
 
+
+/*Resources*/
+
+.resources {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 100px 0 217px;
+}
+
+.resources__logo-zone {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  margin: 80px auto 0;
+  padding: 0;
+  min-width: 1100px;
+  font-size: 0px;
+  line-height: 0px;
+}
+
+.resources__logo {
+  width: 270px;
+  height: 38px;
+  object-fit: contain;
+}
+
+.header__link {
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
 
 /*Footer*/
 
